# WebCore-stripped

./: .gitattributes  CMakeLists.txt  CreateSDK.cmake  Deps.cmake
Source/: CMakeLists.txt
Source/JavaScriptCore/: CMakeLists.txt
Source/WTF/: CMakeLists.txt
Source/WTF/wtf/: CMakeLists.txt  FeatureDefines.h  Platform.h
Source/WTF/wtf/text/: TextBreakIterator.h
Source/WTF/wtf/unicode/: CharacterNames.h  Collator.h  CollatorDefault.cpp  UTF8Conversion.cpp  UTF8Conversion.h  UnicodeMacros.h
Source/WebCore/: CMakeLists.txt  DerivedSources-input.xcfilelist  DerivedSources.make  Headers.cmake  PlatformFTW.cmake  PlatformGTK.cmake  PlatformMac.cmake  PlatformUltralightLinux.cmake  PlatformUltralightMac.cmake  PlatformUltralightWin.cmake  PlatformWPE.cmake  PlatformWin.cmake  Sources.txt  SourcesCocoa.txt  SourcesGTK.txt  SourcesWPE.txt  config.h
Source/WebCore/PAL/pal/: PlatformMac.cmake  PlatformPlayStation.cmake  PlatformUltralightLinux.cmake  PlatformUltralightMac.cmake  PlatformUltralightWin.cmake
Source/WebCore/platform/: Curl.cmake
Source/cmake/: OptionsFTW.cmake  OptionsGTK.cmake  OptionsJSCOnly.cmake  OptionsMac.cmake  OptionsWPE.cmake  OptionsWin.cmake  UltralightOptions.cmake  WebKitFS.cmake  WebKitFeatures.cmake
